fix: Add correct template colunms to the footer content element on tablet and desktop Card: https://app.clickup.com/t/2tk8mnn

--- a/src/styles/globals/_footer-content.css
+++ b/src/styles/globals/_footer-content.css
@@ -18,14 +18,14 @@
 
 @media screen and (min-width: 640px) {
     .footer-content {
-        --footer-content-grid-template-columns: 1fr 1fr 1fr;
+        --footer-content-grid-template-columns: 1fr 1fr auto;
         --footer-content-grid-gap: var(--spacing-xxl);
     }
 }
 
 @media screen and (min-width: 960px) {
     .footer-content {
-        --footer-content-grid-template-columns: 3fr 2fr 2fr 2fr;
+        --footer-content-grid-template-columns: 1fr 1fr 1fr auto;
         --footer-content-grid-gap: var(--spacing-xl);
     }
 }
